@@ -1,14 +1,13 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon
-
+#FROM gradle:4.7.0-jdk8-alpine AS build
 FROM openjdk:11
+#COPY --chown=gradle:gradle . /home/gradle/src
+#WORKDIR /home/gradle/src
+#RUN gradle build --no-daemon
 
 EXPOSE 8085
 
-RUN mkdir /app
+RUN mkdir -p /app
 
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/phone.jar
+ADD build/libs/phone-0.0.1-SNAPSHOT.jar /app/phone-0.0.1-snapshot.jar
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/phone.jar"]
+ENTRYPOINT ["java", "-jar", "/app/phone-0.0.1-snapshot.jar"]
